Update official host information for RDD

--- a/src/index.html
+++ b/src/index.html
@@ -494,7 +494,7 @@
             </div>
 
             <div class="warning lazy-load">
-                <p>⚠️ The only <i>official</i> host of RDD is <a href="https://nguyennhatit.localplayer.dev/RobloxDeploymentDownloader"><b>nguyennhatit.localplayer.dev/robloxdeploymentdownloader</b></a>. Under no circumstances is Latte Softworks responsible for any potential harm caused by using an unofficial fork/rehost of RDD, though anyone is free to fork off of or rehost RDD under its license.</p>
+                <p>⚠️ The only <i>official</i> host of RDD is <a href="https://rdd-roblox.pages.dev/"><b>rdd-roblox.pages.dev</b></a>. Under no circumstances is Nguyen Minh Nhat responsible for any potential harm caused by using an unofficial fork/rehost of RDD, though anyone is free to fork off of or rehost RDD under its license.</p>
             </div>
 
             <noscript>
